test/compile_errors/err_label_mid_statement.w
//! expect-check-fail: label must start a statement

fn main:
    var ticks = 0
    if true: 'outer while ticks < 3:
        ticks += 1
